# mrm-erc-nav-field-trial

./: Dockerfile  README.md  credentials.env  start.sh
src/erc_bringup/: CMakeLists.txt  package.xml
src/erc_bringup/config/: ekf2.yaml
src/erc_bringup/config/move_base/costmaps/: costmap_common.yaml  global_costmap.yaml  local_costmap.yaml
src/erc_bringup/launch/: Goal.launch  ar_tag_detection.launch  depth_to_laserscan.launch  image_capture.launch  mapserver.launch  mapserver_anti.launch  mapserver_backup.launch  mapserver_clockwise.launch  move_base_ai.launch  pcl_to_laser.launch  robot_localisation_A.launch  robot_localisation_B.launch  saac_1.launch  secondary_software_1A.launch  secondary_software_1B.launch  secondary_software_2.launch  secondary_software_3.launch  starting_software.launch
src/erc_bringup/map/: anticlockwise_rotate.pgm  clockwise_rotate.pgm  marsyard_final.pgm  marsyard_final_1.pgm  marsyard_final_2.pgm  marsyard_td3_edited.pgm  marsyard_td3_edited3.pgm  marsyard_updated_backup.yaml  marsyard_updated_v5.yaml  marsyard_updated_v51.yaml  marsyard_updated_v52.yaml
src/erc_bringup/media/images_center/: image_0000.ini
src/erc_bringup/media/images_left/: image_0000.ini
src/erc_bringup/media/images_right/: image_0000.ini
src/erc_bringup/scripts/: path.py  waypoint_probe_deployment.py
src/erc_bringup/src/: Cancel.cpp  ar2.cpp  goal.cpp  markers_rviz.cpp  stop.cpp  sub_marker.cpp  wheel_pose_repub.cpp  wheel_twist_repub.cpp
